navbar and footer updated

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -71,12 +71,12 @@
                     <!-- Links -->
                     <div class="col-xl-2 col-lg-2 col-md-3">
                         <div class="footer-links">
-                            <h3>For Candidates</h3>
+                            <h3>For Patient</h3>
                             <ul>
-                                <li><a href="#"><span>Browse Jobs</span></a></li>
-                                <li><a href="#"><span>Add Resume</span></a></li>
-                                <li><a href="#"><span>Job Alerts</span></a></li>
-                                <li><a href="#"><span>My Bookmarks</span></a></li>
+                                <li><a routerLink="/internships">Browse Clinics</a></li>
+                                <li><a routerLink="/companies">Browse Hospitals</a></li>
+                                <li><a routerLink="/doctors">Browse Doctors</a></li>
+                                <li><a href="#"><span>Profile</span></a></li>
                             </ul>
                         </div>
                     </div>
@@ -84,12 +84,12 @@
                     <!-- Links -->
                     <div class="col-xl-2 col-lg-2 col-md-3">
                         <div class="footer-links">
-                            <h3>For Employers</h3>
+                            <h3>For Doctors</h3>
                             <ul>
-                                <li><a href="#"><span>Browse Candidates</span></a></li>
-                                <li><a href="#"><span>Post a Job</span></a></li>
-                                <li><a href="#"><span>Post a Task</span></a></li>
-                                <li><a href="#"><span>Plans & Pricing</span></a></li>
+                                <li><a href="#"><span>Browse Patients</span></a></li>
+                                <li><a href="#"><span>Post a Article</span></a></li>
+                                <li><a href="#"><span>Profile</span></a></li>
+                              
                             </ul>
                         </div>
                     </div>
@@ -99,8 +99,8 @@
                         <div class="footer-links">
                             <h3>Helpful Links</h3>
                             <ul>
-                                <li><a href="#"><span>Contact</span></a></li>
-                                <li><a href="#"><span>Privacy Policy</span></a></li>
+                                <li><a routerLink="/contact"><span>Contact</span></a></li>
+                                 <li><a href="#"><span>Privacy Policy</span></a></li>
                                 <li><a href="#"><span>Terms of Use</span></a></li>
                             </ul>
                         </div>
@@ -120,7 +120,7 @@
                     <!-- Newsletter -->
                     <div class="col-xl-4 col-lg-4 col-md-12">
                         <h3><i class="icon-feather-mail"></i> Sign Up For a Newsletter</h3>
-                        <p>Weekly breaking news, analysis and cutting edge advices on job searching.</p>
+                        <p>Weekly new Articles, health tips and etc.</p>
                         <form action="#" method="get" class="newsletter">
                             <input type="text" name="fname" placeholder="Enter your email address">
                             <button type="submit"><i class="icon-feather-arrow-right"></i></button>
@@ -136,7 +136,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-xl-12">
-                        © 2018 <strong>Hireo</strong>. All Rights Reserved.
+                        © 2019 <strong>Suwasetha</strong>. All Rights Reserved.
                     </div>
                 </div>
             </div>
