--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -30,7 +30,7 @@
                     <nav id="navigation">
                             <ul id="responsive">
         
-                                <li><a routerLink="/" class="current">Home</a></li>
+                                <li><a routerLink="/">Home</a></li>
                                 <li><a routerLink="/internships">Clinics</a></li>
                                 <li><a routerLink="/companies">Hospitals</a></li>
                                 <li><a routerLink="/doctors">Doctors</a></li>
