--- a/src/app/nav2/nav2.component.html
+++ b/src/app/nav2/nav2.component.html
@@ -28,13 +28,14 @@
             <nav id="navigation">
                     <ul id="responsive">
 
-                        <li><a routerLink="/" class="current">Home</a></li>
-                        <li><a routerLink="/internships">Internships</a></li>
-                        <li><a routerLink="/companies">Companies</a></li>
-                        <li><a routerLink="/blog">Blog</a></li>
-                        <li><a routerLink="/about">About US</a></li>
-                        <li><a routerLink="/contact">Contact</a></li>
-                        <li><a routerLink="/login">Login/Register</a></li>
+                        <li><a routerLink="/">Home</a></li>
+                                <li><a routerLink="/internships">Clinics</a></li>
+                                <li><a routerLink="/companies">Hospitals</a></li>
+                                <li><a routerLink="/doctors">Doctors</a></li>
+                                <li><a routerLink="/blog">Blog</a></li>
+                                <li><a routerLink="/about">About Us</a></li>
+                                <li><a routerLink="/contact">Contact</a></li>
+                                <li><a routerLink="/login">Login/Register</a></li>
            
 
                     </ul>
