--- a/src/app/nav2/nav2.component.html
+++ b/src/app/nav2/nav2.component.html
@@ -13,7 +13,7 @@
             
             <!-- Logo -->
             <div id="logo">
-                <a href="index.html"><img src="assets/images/logo.png" data-sticky-logo="assets/images/logo.png" data-transparent-logo="assets/images/logo2.png" alt=""></a>
+                <a href="index.html"><img src="assets/images/logo2.png" data-sticky-logo="assets/images/logo2.png" data-transparent-logo="assets/images/logo2.png" alt=""></a>
             </div>
 
             
