--- a/src/app/companies/companies.component.html
+++ b/src/app/companies/companies.component.html
@@ -6,14 +6,14 @@
 		<div class="row">
 			<div class="col-md-12">
 
-				<h2>Browse Companies</h2>
+				<h2>Browse Hospitals</h2>
 
 				<!-- Breadcrumbs -->
 				<nav id="breadcrumbs" class="dark">
 					<ul>
 						<li><a href="#">Home</a></li>
-						<li><a href="#">Find Work</a></li>
-						<li>Browse Companies</li>
+						<li><a href="#">Hospitals</a></li>
+						<li>Browse Hospitals</li>
 					</ul>
 				</nav>
 
@@ -58,47 +58,41 @@
 			</div>
 		</div>
 		<div class="col-xl-12">
-			<div class="companies-list">
-				<a href="single-company-profile.html" class="company">
-					<div class="company-inner-alignment">
-						<span class="company-logo"><img src="assets/images/company-logo-placeholder.png" alt=""></span>
-						<h4>Acra</h4>
-						<div class="star-rating" data-rating="3.5"></div>
+			<div class="hospitals-list">
+				<a href="single-hospital-profile.html" class="hospital">
+					<div class="hospital-inner-alignment">
+						<span class="hospital-logo"><img src="assets/images/hospitals/nhsl.jpg" alt=""></span>
+						<h4>National Hospital Sri Lanka</h4>
 					</div>
 				</a>
-				<a href="single-company-profile.html" class="company">
-					<div class="company-inner-alignment">
-						<span class="company-logo"><img src="assets/images/browse-companies-02.png" alt=""></span>
-						<h4>Acue</h4>
-						<div class="star-rating" data-rating="5.0"></div>
+				<a href="single-hospital-profile.html" class="hospital">
+					<div class="hospital-inner-alignment">
+						<span class="hospital-logo"><img src="assets/images/hospitals/gampaha.jpg" alt=""></span>
+						<h4>District General Hospital - Gampaha</h4>
 					</div>
 				</a>
-				<a href="single-company-profile.html" class="company">
-					<div class="company-inner-alignment">
-						<span class="company-logo"><img src="assets/images/browse-companies-04.png" alt=""></span>
-						<h4>Acorta</h4>
-						<span class="company-not-rated">Minimum of 3 votes required</span>
+				<a href="single-hospital-profile.html" class="hospital">
+					<div class="hospital-inner-alignment">
+						<span class="hospital-logo"><img src="assets/images/hospitals/mirigama.jpg" alt=""></span>
+						<h4>Base Hospital - Mirigama</h4>
 					</div>
 				</a>
-				<a href="single-company-profile.html" class="company">
-					<div class="company-inner-alignment">
-						<span class="company-logo"><img src="assets/images/company-logo-placeholder.png" alt=""></span>
-						<h4>Acuneol</h4>
-						<span class="company-not-rated">Minimum of 3 votes required</span>
+				<a href="single-hospital-profile.html" class="hospital">
+					<div class="hospital-inner-alignment">
+						<span class="hospital-logo"><img src="assets/images/hospitals/wathupitiwala.jpg" alt=""></span>
+						<h4>Base Hospital - Wathupitiwala</h4>
 					</div>
 				</a>
-				<a href="single-company-profile.html" class="company">
-					<div class="company-inner-alignment">
-						<span class="company-logo"><img src="assets/images/browse-companies-03.png" alt=""></span>
-						<h4>Acodia</h4>
-						<div class="star-rating" data-rating="4.9"></div>
+				<a href="single-hospital-profile.html" class="hospital">
+					<div class="hospital-inner-alignment">
+						<span class="hospital-logo"><img src="assets/images/hospitals/kiribathgoda.jpg" alt=""></span>
+						<h4>Base Hospital - Kiribathgoda</h4>
 					</div>
 				</a>
-				<a href="single-company-profile.html" class="company">
-					<div class="company-inner-alignment">
-						<span class="company-logo"><img src="assets/images/company-logo-placeholder.png" alt=""></span>
-						<h4>Acagic</h4>
-						<span class="company-not-rated">Minimum of 3 votes required</span>
+				<a href="single-hospital-profile.html" class="hospital">
+					<div class="hospital-inner-alignment">
+						<span class="hospital-logo"><img src="assets/images/hospitals/jpura.jpg" alt=""></span>
+						<h4>Sri Jayawardenepura General Hospital</h4>
 					</div>
 				</a>
 			</div>
