--- a/src/styles.css
+++ b/src/styles.css
@@ -39,7 +39,7 @@
   # Tasks - Grid Layout
   # Freelancers - Grid Layout
   # Freelancers - List Layout
-  # Browse Companies
+  # Browse hospitals
 
 04. User Interface Elements -------------------------------------
   # Buttons
@@ -4496,7 +4496,7 @@ span.blog-item-tag {
 	padding-bottom: 32px;
 }
 
-.job-listing .job-listing-company-logo {
+.job-listing .job-listing-hospital-logo {
 	flex: 1;
 	max-width: 55px;
 	margin-right: 25px;
@@ -4504,7 +4504,7 @@ span.blog-item-tag {
 	top: 3px;
 }
 
-.job-listing .job-listing-company-logo img {
+.job-listing .job-listing-hospital-logo img {
 	border-radius: 4px;
 	transform: translate3d(0,0,0);
 }
@@ -4520,7 +4520,7 @@ span.blog-item-tag {
 	color: #666;
 }
 
-.job-listing h4.job-listing-company {
+.job-listing h4.job-listing-hospital {
 	font-size: 16px;
 	color: #808080;
 }
@@ -4567,7 +4567,7 @@ span.blog-item-tag {
 
 /* Media Queries for Default List Layout*/
 @media (max-width: 768px) {
-	.job-listing .job-listing-company-logo { display: none; }
+	.job-listing .job-listing-hospital-logo { display: none; }
 	.job-listing .job-listing-title { padding-right: 10%; }
 }
 
@@ -4642,7 +4642,7 @@ span.blog-item-tag {
     top: 0;
 }
 
-.compact-list-layout .job-listing .job-listing-company-logo {
+.compact-list-layout .job-listing .job-listing-hospital-logo {
 	max-width: 50px;
 	margin-right: 30px;
 	top: 0;
@@ -4695,7 +4695,7 @@ span.blog-item-tag {
     box-shadow: 0 4px 12px rgba(102,103,107,0.15);
 }
 
-/* Alt Styles for Single Company Profile */
+/* Alt Styles for Single hospital Profile */
 .boxed-list .compact-list-layout {
 	box-shadow: none;
 	margin-top: 0;
@@ -4768,7 +4768,7 @@ span.blog-item-tag {
 	transform: translateY(-50%) scale(0.96);
 }
 
-.grid-layout .job-listing .job-listing-company-logo {
+.grid-layout .job-listing .job-listing-hospital-logo {
 	max-width: 56px;
 	margin-right: 24px;
 	top: 1px;
@@ -5513,7 +5513,7 @@ span.blog-item-tag {
 }
 
 /* ---------------------------------- */
-/* Browse Companies
+/* Browse hospitals
 ------------------------------------- */
 
 /* Letters List */
@@ -5553,15 +5553,15 @@ span.blog-item-tag {
 	box-shadow: 0 2px 8px rgba(0,0,0,0.2);
 }
 
-/* Companies List */
-.companies-list {
+/* hospitals List */
+.hospitals-list {
 	display: flex;
     flex-wrap: wrap;
 	margin-top: 30px;
 	width: calc(100% + 30px);
 }
 
-.companies-list .company {
+.hospitals-list .hospital {
 	width: calc(33.3% - 30px);
 	margin: 0 30px 30px 0;
 	flex-grow: 1;
@@ -5575,17 +5575,17 @@ span.blog-item-tag {
 	transition: 0.3s;
 }
 
-.companies-list .company:hover {
+.hospitals-list .hospital:hover {
 	transform: translateY(-3px);
 
 }
 
 @media (min-width: 993px) {
-	.companies-list .company:nth-child(3n) { border-right: none; }
-	.companies-list .company:nth-last-child(-n+3) { border-bottom: none; }
+	.hospitals-list .hospital:nth-child(3n) { border-right: none; }
+	.hospitals-list .hospital:nth-last-child(-n+3) { border-bottom: none; }
 }
 
-.companies-list .company img {
+.hospitals-list .hospital img {
 	max-width: 120px;
 	max-height: 60px;
 	display: inline-block;
@@ -5593,7 +5593,7 @@ span.blog-item-tag {
 	transform: translate3d(0,0,0);
 }
 
-.companies-list .company .company-logo {
+.hospitals-list .hospital .hospital-logo {
 	height: 60px;
 	display: flex;
 	display: flex;
@@ -5602,7 +5602,7 @@ span.blog-item-tag {
 	margin-bottom: 30px;
 }
 
-.companies-list .company h4 {
+.hospitals-list .hospital h4 {
 	color: #333;
 	font-size: 18px;
 	font-weight: 600;
@@ -5610,16 +5610,16 @@ span.blog-item-tag {
 	display: block;
 }
 
-.companies-list .company span {
+.hospitals-list .hospital span {
 	color: #888;
 }
 
-.companies-list .company .star-rating {
+.hospitals-list .hospital .star-rating {
 	margin-top: 5px;
 }
 
 .not-rated,
-.company-not-rated {
+.hospital-not-rated {
     border-radius: 4px;
     background-color: #f0f0f0;
     color: #888;
@@ -5632,7 +5632,7 @@ span.blog-item-tag {
     text-align: center;
 }
 
-/* Media Queries for Companies List */
+/* Media Queries for hospitals List */
 @media (max-width: 1366px) {
 	.letters-list a {
 		font-size: 16px;
@@ -5644,11 +5644,11 @@ span.blog-item-tag {
 }
 
 @media (max-width: 992px) {
-	.companies-list .company { 	width: calc(50% - 30px); }
+	.hospitals-list .hospital { 	width: calc(50% - 30px); }
 }
 
 @media (max-width: 768px) {
-	.companies-list .company { width: 100%; }
+	.hospitals-list .hospital { width: 100%; }
 }
 
 /* -------------------------------------------------------------- */
@@ -6634,7 +6634,7 @@ table.basic-table { margin-bottom: 0; }
 /* ---------------------------------- */
 /* Verified Badge
 ------------------------------------- */
-.job-listing-company .verified-badge,
+.job-listing-hospital .verified-badge,
 .job-listing .job-listing-footer ul li .verified-badge {
 	position: relative;
 	display: inline-block;
@@ -6666,7 +6666,7 @@ table.basic-table { margin-bottom: 0; }
 	line-height: 27px;
 }
 
-.job-listing .job-listing-company-logo .verified-badge {
+.job-listing .job-listing-hospital-logo .verified-badge {
 	position: absolute;
 	bottom: 0;
 	right: 0;
@@ -12051,7 +12051,7 @@ body .pac-container {
     padding: 20px 25px;
 }
 
-.infoBox .job-listing h4.job-listing-company {
+.infoBox .job-listing h4.job-listing-hospital {
 	font-size: 14px;
 	position: relative;
 	top: 0px;
@@ -12079,14 +12079,14 @@ body .pac-container {
 	line-height: 24px;
 }
 
-.infoBox .job-listing .job-listing-company-logo {
+.infoBox .job-listing .job-listing-hospital-logo {
 	max-width: 46px;
 	margin: 5px 18px 5px 0;
 	top: 0;
 	flex: 0 0 46px;
 }
 
-.infoBox .job-listing .job-listing-company-logo img { max-width: 46px; }
+.infoBox .job-listing .job-listing-hospital-logo img { max-width: 46px; }
 
 
 .map-box {
@@ -13865,7 +13865,7 @@ ul.dashboard-box-list > li:hover {
 	font-size: 18px;
 }
 
-.dashboard-box .job-listing .job-listing-company-logo {
+.dashboard-box .job-listing .job-listing-hospital-logo {
 	max-width: 50px;
 }
 
@@ -14015,7 +14015,7 @@ ul.dashboard-box-list > li:hover {
 	.dashboard-box .freelancer-overview .freelancer-name {
 	    margin: 0 0 0 25px;
 	}
-	.dashboard-box .job-listing .job-listing-company-logo {
+	.dashboard-box .job-listing .job-listing-hospital-logo {
 		display: none;
 	}
 
