doctors changed css freelancer/freelancers to doctors

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -32,7 +32,7 @@
         
                                 <li><a routerLink="/">Home</a></li>
                                 <li><a routerLink="/internships">Clinics</a></li>
-                                <li><a routerLink="/companies">Hospitals</a></li>
+                                <li><a routerLink="/Hospital">Hospitals</a></li>
                                 <li><a routerLink="/doctors">Doctors</a></li>
                                 <li><a routerLink="/blog">Blog</a></li>
                                 <li><a routerLink="/about">About Us</a></li>
