--- a/src/app/doctors/doctors.component.html
+++ b/src/app/doctors/doctors.component.html
@@ -58,9 +58,7 @@
 			<h3 class="page-title">Search Results</h3>
 
 			<div class="notify-box margin-top-15">
-				<div class="switch-container">
-					<label class="switch"><input type="checkbox"><span class="switch-button"></span><span class="switch-text">Turn on email alerts for this search</span></label>
-				</div>
+				
 
 				<div class="sort-by">
 					<span>Sort by:</span>
@@ -73,31 +71,31 @@
 				</div>
 			</div>
 			
-			<!-- Freelancers List Container -->
-			<div class="freelancers-container freelancers-list-layout compact-list margin-top-35">
+			<!-- Doctors List Container -->
+			<div class="doctors-container doctors-list-layout compact-list margin-top-35">
 				
-				<!--Freelancer -->
-				<div class="freelancer">
+				<!--Doctors -->
+				<div class="doctors">
 
 					<!-- Overview -->
-					<div class="freelancer-overview">
-						<div class="freelancer-overview-inner">
+					<div class="doctors-overview">
+						<div class="doctors-overview-inner">
 							
 							<!-- Bookmark Icon -->
 							<span class="bookmark-icon"></span>
 							
 							<!-- Avatar -->
-							<div class="freelancer-avatar">
+							<div class="doctors-avatar">
 								<div class="verified-badge"></div>
-								<a href="single-freelancer-profile.html"><img src="images/user-avatar-big-01.jpg" alt=""></a>
+								<a href="single-doctors-profile.html"><img src="images/user-avatar-big-01.jpg" alt=""></a>
 							</div>
 
 							<!-- Name -->
-							<div class="freelancer-name">
+							<div class="doctors-name">
 								<h4><a href="#">Tom Smith <img class="flag" src="images/flags/gb.svg" alt="" title="United Kingdom" data-tippy-placement="top"></a></h4>
 								<span>UI/UX Designer</span>
 								<!-- Rating -->
-								<div class="freelancer-rating">
+								<div class="doctors-rating">
 									<div class="star-rating" data-rating="4.9"></div>
 								</div>
 							</div>
@@ -105,41 +103,41 @@
 					</div>
 					
 					<!-- Details -->
-					<div class="freelancer-details">
-						<div class="freelancer-details-list">
+					<div class="doctors-details">
+						<div class="doctors-details-list">
 							<ul>
 								<li>Location <strong><i class="icon-material-outline-location-on"></i> London</strong></li>
 								<li>Rate <strong>$60 / hr</strong></li>
 								<li>Job Success <strong>95%</strong></li>
 							</ul>
 						</div>
-						<a href="single-freelancer-profile.html" class="button button-sliding-icon ripple-effect">View Profile <i class="icon-material-outline-arrow-right-alt"></i></a>
+						<a href="single-doctors-profile.html" class="button button-sliding-icon ripple-effect">View Profile <i class="icon-material-outline-arrow-right-alt"></i></a>
 					</div>
 				</div>
-				<!-- Freelancer / End -->
+				<!-- doctors / End -->
 
-				<!--Freelancer -->
-				<div class="freelancer">
+				<!--doctors -->
+				<div class="doctors">
 
 					<!-- Overview -->
-					<div class="freelancer-overview">
-						<div class="freelancer-overview-inner">
+					<div class="doctors-overview">
+						<div class="doctors-overview-inner">
 							
 							<!-- Bookmark Icon -->
 							<span class="bookmark-icon"></span>
 							
 							<!-- Avatar -->
-							<div class="freelancer-avatar">
+							<div class="doctors-avatar">
 								<div class="verified-badge"></div>
-								<a href="single-freelancer-profile.html"><img src="images/user-avatar-big-02.jpg" alt=""></a>
+								<a href="single-doctors-profile.html"><img src="images/user-avatar-big-02.jpg" alt=""></a>
 							</div>
 
 							<!-- Name -->
-							<div class="freelancer-name">
+							<div class="doctors-name">
 								<h4><a href="#">David Peterson <img class="flag" src="images/flags/de.svg" alt="" title="Germany" data-tippy-placement="top"></a></h4>
 								<span>iOS Expert + Node Dev</span>
 								<!-- Rating -->
-								<div class="freelancer-rating">
+								<div class="doctors-rating">
 									<div class="star-rating" data-rating="4.2"></div>
 								</div>
 							</div>
@@ -147,35 +145,35 @@
 					</div>
 					
 					<!-- Details -->
-					<div class="freelancer-details">
-						<div class="freelancer-details-list">
+					<div class="doctors-details">
+						<div class="doctors-details-list">
 							<ul>
 								<li>Location <strong><i class="icon-material-outline-location-on"></i> Berlin</strong></li>
 								<li>Rate <strong>$40 / hr</strong></li>
 								<li>Job Success <strong>88%</strong></li>
 							</ul>
 						</div>
-						<a href="single-freelancer-profile.html" class="button button-sliding-icon ripple-effect">View Profile <i class="icon-material-outline-arrow-right-alt"></i></a>
+						<a href="single-doctors-profile.html" class="button button-sliding-icon ripple-effect">View Profile <i class="icon-material-outline-arrow-right-alt"></i></a>
 					</div>
 				</div>
-				<!-- Freelancer / End -->
+				<!-- doctors / End -->
 
-				<!--Freelancer -->
-				<div class="freelancer">
+				<!--doctors -->
+				<div class="doctors">
 
 					<!-- Overview -->
-					<div class="freelancer-overview">
-						<div class="freelancer-overview-inner">
+					<div class="doctors-overview">
+						<div class="doctors-overview-inner">
 							<!-- Bookmark Icon -->
 							<span class="bookmark-icon"></span>
 							
 							<!-- Avatar -->
-							<div class="freelancer-avatar">
-								<a href="single-freelancer-profile.html"><img src="images/user-avatar-placeholder.png" alt=""></a>
+							<div class="doctors-avatar">
+								<a href="single-doctors-profile.html"><img src="images/user-avatar-placeholder.png" alt=""></a>
 							</div>
 
 							<!-- Name -->
-							<div class="freelancer-name">
+							<div class="doctors-name">
 								<h4><a href="#">Marcin Kowalski <img class="flag" src="images/flags/pl.svg" alt="" title="Poland" data-tippy-placement="top"></a></h4>
 								<span>Front-End Developer</span>
 								<!-- Rating -->
@@ -185,40 +183,40 @@
 					</div>
 					
 					<!-- Details -->
-					<div class="freelancer-details">
-						<div class="freelancer-details-list">
+					<div class="doctors-details">
+						<div class="doctors-details-list">
 							<ul>
 								<li>Location <strong><i class="icon-material-outline-location-on"></i> Warsaw</strong></li>
 								<li>Rate <strong>$50 / hr</strong></li>
 								<li>Job Success <strong>100%</strong></li>
 							</ul>
 						</div>
-						<a href="single-freelancer-profile.html" class="button button-sliding-icon ripple-effect">View Profile <i class="icon-material-outline-arrow-right-alt"></i></a>
+						<a href="single-doctors-profile.html" class="button button-sliding-icon ripple-effect">View Profile <i class="icon-material-outline-arrow-right-alt"></i></a>
 					</div>
 				</div>
-				<!-- Freelancer / End -->
+				<!-- doctors / End -->
 
-				<!--Freelancer -->
-				<div class="freelancer">
+				<!--doctors -->
+				<div class="doctors">
 
 					<!-- Overview -->
-					<div class="freelancer-overview">
-							<div class="freelancer-overview-inner">
+					<div class="doctors-overview">
+							<div class="doctors-overview-inner">
 							<!-- Bookmark Icon -->
 							<span class="bookmark-icon"></span>
 							
 							<!-- Avatar -->
-							<div class="freelancer-avatar">
+							<div class="doctors-avatar">
 								<div class="verified-badge"></div>
-								<a href="single-freelancer-profile.html"><img src="images/user-avatar-big-03.jpg" alt=""></a>
+								<a href="single-doctors-profile.html"><img src="images/user-avatar-big-03.jpg" alt=""></a>
 							</div>
 
 							<!-- Name -->
-							<div class="freelancer-name">
+							<div class="doctors-name">
 								<h4><a href="#">Sindy Forest <img class="flag" src="images/flags/au.svg" alt="" title="Australia" data-tippy-placement="top"></a></h4>
 								<span>Magento Certified Developer</span>
 								<!-- Rating -->
-								<div class="freelancer-rating">
+								<div class="doctors-rating">
 									<div class="star-rating" data-rating="5.0"></div>
 								</div>
 							</div>
@@ -226,39 +224,39 @@
 					</div>
 					
 					<!-- Details -->
-					<div class="freelancer-details">
-						<div class="freelancer-details-list">
+					<div class="doctors-details">
+						<div class="doctors-details-list">
 							<ul>
 								<li>Location <strong><i class="icon-material-outline-location-on"></i> Brisbane</strong></li>
 								<li>Rate <strong>$70 / hr</strong></li>
 								<li>Job Success <strong>100%</strong></li>
 							</ul>
 						</div>
-						<a href="single-freelancer-profile.html" class="button button-sliding-icon ripple-effect">View Profile <i class="icon-material-outline-arrow-right-alt"></i></a>
+						<a href="single-doctors-profile.html" class="button button-sliding-icon ripple-effect">View Profile <i class="icon-material-outline-arrow-right-alt"></i></a>
 					</div>
 				</div>
-				<!-- Freelancer / End -->
+				<!-- doctors / End -->
 
-				<!--Freelancer -->
-				<div class="freelancer">
+				<!--doctors -->
+				<div class="doctors">
 
 					<!-- Overview -->
-					<div class="freelancer-overview">
-							<div class="freelancer-overview-inner">
+					<div class="doctors-overview">
+							<div class="doctors-overview-inner">
 							<!-- Bookmark Icon -->
 							<span class="bookmark-icon"></span>
 							
 							<!-- Avatar -->
-							<div class="freelancer-avatar">
-								<a href="single-freelancer-profile.html"><img src="images/user-avatar-placeholder.png" alt=""></a>
+							<div class="doctors-avatar">
+								<a href="single-doctors-profile.html"><img src="images/user-avatar-placeholder.png" alt=""></a>
 							</div>
 
 							<!-- Name -->
-							<div class="freelancer-name">
+							<div class="doctors-name">
 								<h4><a href="#">Sebastiano Piccio <img class="flag" src="images/flags/it.svg" alt="" title="Italy" data-tippy-placement="top"></a></h4>
 								<span>Laravel Dev</span>
 								<!-- Rating -->
-								<div class="freelancer-rating">
+								<div class="doctors-rating">
 									<div class="star-rating" data-rating="4.5"></div>
 								</div>
 							</div>
@@ -266,22 +264,22 @@
 					</div>
 					
 					<!-- Details -->
-					<div class="freelancer-details">
-						<div class="freelancer-details-list">
+					<div class="doctors-details">
+						<div class="doctors-details-list">
 							<ul>
 								<li>Location <strong><i class="icon-material-outline-location-on"></i> Milan</strong></li>
 								<li>Rate <strong>$80 / hr</strong></li>
 								<li>Job Success <strong>89%</strong></li>
 							</ul>
 						</div>
-						<a href="single-freelancer-profile.html" class="button button-sliding-icon ripple-effect">View Profile <i class="icon-material-outline-arrow-right-alt"></i></a>
+						<a href="single-doctors-profile.html" class="button button-sliding-icon ripple-effect">View Profile <i class="icon-material-outline-arrow-right-alt"></i></a>
 					</div>
 				</div>
-				<!-- Freelancer / End -->
+				<!-- doctors / End -->
 
 	
 			</div>
-			<!-- Freelancers Container / End -->
+			<!-- Doctors Container / End -->
 
 
 			<!-- Pagination -->
