--- a/src/app/doctors/doctors.component.html
+++ b/src/app/doctors/doctors.component.html
@@ -92,12 +92,10 @@
 
 							<!-- Name -->
 							<div class="doctors-name">
-								<h4><a href="#">Tom Smith <img class="flag" src="images/flags/gb.svg" alt="" title="United Kingdom" data-tippy-placement="top"></a></h4>
-								<span>UI/UX Designer</span>
+								<h4><a href="#">Tom Smith<img src="images/doctors/d1.jpg" alt="" title="National Hospital Sri Lanka" data-tippy-placement="top"></a></h4>
+								<span>MBBS University of Colombo</span>
 								<!-- Rating -->
-								<div class="doctors-rating">
-									<div class="star-rating" data-rating="4.9"></div>
-								</div>
+								
 							</div>
 						</div>
 					</div>
@@ -106,9 +104,8 @@
 					<div class="doctors-details">
 						<div class="doctors-details-list">
 							<ul>
-								<li>Location <strong><i class="icon-material-outline-location-on"></i> London</strong></li>
-								<li>Rate <strong>$60 / hr</strong></li>
-								<li>Job Success <strong>95%</strong></li>
+								<li>Location <strong><i class="icon-material-outline-location-on"></i>National Hospital Sri Lanka</strong></li>
+								<li>Speciality <strong>Pediatrician</strong></li>
 							</ul>
 						</div>
 						<a href="single-doctors-profile.html" class="button button-sliding-icon ripple-effect">View Profile <i class="icon-material-outline-arrow-right-alt"></i></a>
@@ -116,7 +113,7 @@
 				</div>
 				<!-- doctors / End -->
 
-				<!--doctors -->
+				<!--Doctors -->
 				<div class="doctors">
 
 					<!-- Overview -->
@@ -129,17 +126,15 @@
 							<!-- Avatar -->
 							<div class="doctors-avatar">
 								<div class="verified-badge"></div>
-								<a href="single-doctors-profile.html"><img src="images/user-avatar-big-02.jpg" alt=""></a>
+								<a href="single-doctors-profile.html"><img src="images/user-avatar-big-01.jpg" alt=""></a>
 							</div>
 
 							<!-- Name -->
 							<div class="doctors-name">
-								<h4><a href="#">David Peterson <img class="flag" src="images/flags/de.svg" alt="" title="Germany" data-tippy-placement="top"></a></h4>
-								<span>iOS Expert + Node Dev</span>
+								<h4><a href="#">Tom Smith<img src="images/doctors/d1.jpg" alt="" title="National Hospital Sri Lanka" data-tippy-placement="top"></a></h4>
+								<span>MBBS University of Colombo</span>
 								<!-- Rating -->
-								<div class="doctors-rating">
-									<div class="star-rating" data-rating="4.2"></div>
-								</div>
+								
 							</div>
 						</div>
 					</div>
@@ -148,9 +143,8 @@
 					<div class="doctors-details">
 						<div class="doctors-details-list">
 							<ul>
-								<li>Location <strong><i class="icon-material-outline-location-on"></i> Berlin</strong></li>
-								<li>Rate <strong>$40 / hr</strong></li>
-								<li>Job Success <strong>88%</strong></li>
+								<li>Location <strong><i class="icon-material-outline-location-on"></i>National Hospital Sri Lanka</strong></li>
+								<li>Speciality <strong>Pediatrician</strong></li>
 							</ul>
 						</div>
 						<a href="single-doctors-profile.html" class="button button-sliding-icon ripple-effect">View Profile <i class="icon-material-outline-arrow-right-alt"></i></a>
@@ -158,67 +152,28 @@
 				</div>
 				<!-- doctors / End -->
 
-				<!--doctors -->
+				<!--Doctors -->
 				<div class="doctors">
 
 					<!-- Overview -->
 					<div class="doctors-overview">
 						<div class="doctors-overview-inner">
-							<!-- Bookmark Icon -->
-							<span class="bookmark-icon"></span>
 							
-							<!-- Avatar -->
-							<div class="doctors-avatar">
-								<a href="single-doctors-profile.html"><img src="images/user-avatar-placeholder.png" alt=""></a>
-							</div>
-
-							<!-- Name -->
-							<div class="doctors-name">
-								<h4><a href="#">Marcin Kowalski <img class="flag" src="images/flags/pl.svg" alt="" title="Poland" data-tippy-placement="top"></a></h4>
-								<span>Front-End Developer</span>
-								<!-- Rating -->
-								<span class="company-not-rated margin-bottom-5">Minimum of 3 votes required</span>
-							</div>
-						</div>
-					</div>
-					
-					<!-- Details -->
-					<div class="doctors-details">
-						<div class="doctors-details-list">
-							<ul>
-								<li>Location <strong><i class="icon-material-outline-location-on"></i> Warsaw</strong></li>
-								<li>Rate <strong>$50 / hr</strong></li>
-								<li>Job Success <strong>100%</strong></li>
-							</ul>
-						</div>
-						<a href="single-doctors-profile.html" class="button button-sliding-icon ripple-effect">View Profile <i class="icon-material-outline-arrow-right-alt"></i></a>
-					</div>
-				</div>
-				<!-- doctors / End -->
-
-				<!--doctors -->
-				<div class="doctors">
-
-					<!-- Overview -->
-					<div class="doctors-overview">
-							<div class="doctors-overview-inner">
 							<!-- Bookmark Icon -->
 							<span class="bookmark-icon"></span>
 							
 							<!-- Avatar -->
 							<div class="doctors-avatar">
 								<div class="verified-badge"></div>
-								<a href="single-doctors-profile.html"><img src="images/user-avatar-big-03.jpg" alt=""></a>
+								<a href="single-doctors-profile.html"><img src="images/user-avatar-big-01.jpg" alt=""></a>
 							</div>
 
 							<!-- Name -->
 							<div class="doctors-name">
-								<h4><a href="#">Sindy Forest <img class="flag" src="images/flags/au.svg" alt="" title="Australia" data-tippy-placement="top"></a></h4>
-								<span>Magento Certified Developer</span>
+								<h4><a href="#">Tom Smith<img src="images/doctors/d1.jpg" alt="" title="National Hospital Sri Lanka" data-tippy-placement="top"></a></h4>
+								<span>MBBS University of Colombo</span>
 								<!-- Rating -->
-								<div class="doctors-rating">
-									<div class="star-rating" data-rating="5.0"></div>
-								</div>
+								
 							</div>
 						</div>
 					</div>
@@ -227,9 +182,8 @@
 					<div class="doctors-details">
 						<div class="doctors-details-list">
 							<ul>
-								<li>Location <strong><i class="icon-material-outline-location-on"></i> Brisbane</strong></li>
-								<li>Rate <strong>$70 / hr</strong></li>
-								<li>Job Success <strong>100%</strong></li>
+								<li>Location <strong><i class="icon-material-outline-location-on"></i>National Hospital Sri Lanka</strong></li>
+								<li>Speciality <strong>Pediatrician</strong></li>
 							</ul>
 						</div>
 						<a href="single-doctors-profile.html" class="button button-sliding-icon ripple-effect">View Profile <i class="icon-material-outline-arrow-right-alt"></i></a>
@@ -237,28 +191,28 @@
 				</div>
 				<!-- doctors / End -->
 
-				<!--doctors -->
+				<!--Doctors -->
 				<div class="doctors">
 
 					<!-- Overview -->
 					<div class="doctors-overview">
-							<div class="doctors-overview-inner">
+						<div class="doctors-overview-inner">
+							
 							<!-- Bookmark Icon -->
 							<span class="bookmark-icon"></span>
 							
 							<!-- Avatar -->
 							<div class="doctors-avatar">
-								<a href="single-doctors-profile.html"><img src="images/user-avatar-placeholder.png" alt=""></a>
+								<div class="verified-badge"></div>
+								<a href="single-doctors-profile.html"><img src="images/user-avatar-big-01.jpg" alt=""></a>
 							</div>
 
 							<!-- Name -->
 							<div class="doctors-name">
-								<h4><a href="#">Sebastiano Piccio <img class="flag" src="images/flags/it.svg" alt="" title="Italy" data-tippy-placement="top"></a></h4>
-								<span>Laravel Dev</span>
+								<h4><a href="#">Tom Smith<img src="images/doctors/d1.jpg" alt="" title="National Hospital Sri Lanka" data-tippy-placement="top"></a></h4>
+								<span>MBBS University of Colombo</span>
 								<!-- Rating -->
-								<div class="doctors-rating">
-									<div class="star-rating" data-rating="4.5"></div>
-								</div>
+								
 							</div>
 						</div>
 					</div>
@@ -267,9 +221,8 @@
 					<div class="doctors-details">
 						<div class="doctors-details-list">
 							<ul>
-								<li>Location <strong><i class="icon-material-outline-location-on"></i> Milan</strong></li>
-								<li>Rate <strong>$80 / hr</strong></li>
-								<li>Job Success <strong>89%</strong></li>
+								<li>Location <strong><i class="icon-material-outline-location-on"></i>National Hospital Sri Lanka</strong></li>
+								<li>Speciality <strong>Pediatrician</strong></li>
 							</ul>
 						</div>
 						<a href="single-doctors-profile.html" class="button button-sliding-icon ripple-effect">View Profile <i class="icon-material-outline-arrow-right-alt"></i></a>
@@ -277,6 +230,44 @@
 				</div>
 				<!-- doctors / End -->
 
+				<!--Doctors -->
+				<div class="doctors">
+
+					<!-- Overview -->
+					<div class="doctors-overview">
+						<div class="doctors-overview-inner">
+							
+							<!-- Bookmark Icon -->
+							<span class="bookmark-icon"></span>
+							
+							<!-- Avatar -->
+							<div class="doctors-avatar">
+								<div class="verified-badge"></div>
+								<a href="single-doctors-profile.html"><img src="images/user-avatar-big-01.jpg" alt=""></a>
+							</div>
+
+							<!-- Name -->
+							<div class="doctors-name">
+								<h4><a href="#">Tom Smith<img src="images/doctors/d1.jpg" alt="" title="National Hospital Sri Lanka" data-tippy-placement="top"></a></h4>
+								<span>MBBS University of Colombo</span>
+								<!-- Rating -->
+								
+							</div>
+						</div>
+					</div>
+					
+					<!-- Details -->
+					<div class="doctors-details">
+						<div class="doctors-details-list">
+							<ul>
+								<li>Location <strong><i class="icon-material-outline-location-on"></i>National Hospital Sri Lanka</strong></li>
+								<li>Speciality <strong>Pediatrician</strong></li>
+							</ul>
+						</div>
+						<a href="single-doctors-profile.html" class="button button-sliding-icon ripple-effect">View Profile <i class="icon-material-outline-arrow-right-alt"></i></a>
+					</div>
+				</div>
+				<!-- doctors / End -->
 	
 			</div>
 			<!-- Doctors Container / End -->
