appointments component add

--- a/src/app/nav2/nav2.component.html
+++ b/src/app/nav2/nav2.component.html
@@ -28,7 +28,8 @@
             <nav id="navigation">
                     <ul id="responsive">
 
-                        <li><a routerLink="/">Home</a></li>
+                        <li><a routerLink="/">Home</a></li>                        
+                        <li><a routerLink="/appointments">Appointments</a></li>
                                 <li><a routerLink="/internships">Clinics</a></li>
                                 <li><a routerLink="/Hospital">Hospitals</a></li>
                                 <li><a routerLink="/doctors">Doctors</a></li>
