--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -31,6 +31,7 @@
                             <ul id="responsive">
         
                                 <li><a routerLink="/">Home</a></li>
+                                <li><a routerLink="/appointments">Appointments</a></li>
                                 <li><a routerLink="/internships">Clinics</a></li>
                                 <li><a routerLink="/Hospital">Hospitals</a></li>
                                 <li><a routerLink="/doctors">Doctors</a></li>
