appointments form add

--- a/src/app/appointments/appointments.component.html
+++ b/src/app/appointments/appointments.component.html
@@ -1,57 +1,66 @@
-<div id="booking" class="section">
-    <div class="section-center">
-        <div class="container">
-            <div class="row">
-                <div class="booking-form">
-                    <form>
-                        <div class="col-md-8">
-                            <div class="form-group">
-                                <input class="form-control" type="text" placeholder="Enter Address, zip, city or airport">
-                                <span class="form-label">Destination</span>
-                            </div>
-                        </div>
-                        <div class="col-md-2">
-                            <div class="form-group">
-                                <select class="form-control">
-                                    <option>1</option>
-                                    <option>2</option>
-                                    <option>3</option>
-                                </select>
-                                <span class="select-arrow"></span>
-                                <span class="form-label">Guests</span>
-                            </div>
-                        </div>
-                        <div class="col-md-2">
-                            <div class="form-group">
-                                <select class="form-control">
-                                    <option>0</option>
-                                    <option>1</option>
-                                    <option>2</option>
-                                </select>
-                                <span class="select-arrow"></span>
-                                <span class="form-label">Children</span>
-                            </div>
-                        </div>
-                        <div class="col-md-4">
-                            <div class="form-group">
-                                <input class="form-control" type="date" required>
-                                <span class="form-label">Check In</span>
-                            </div>
-                        </div>
-                        <div class="col-md-4">
-                            <div class="form-group">
-                                <input class="form-control" type="date" required>
-                                <span class="form-label">Check out</span>
-                            </div>
-                        </div>
-                        <div class="col-md-4">
-                            <div class="form-btn">
-                                <button class="submit-btn">Check availability</button>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
+<app-nav2></app-nav2>
+
+<!-- Titlebar
+================================================== -->
+<div id="titlebar" class="gradient">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-12">
+
+				<h2>Book an Appointment</h2>
+
+				<!-- Breadcrumbs -->
+				<nav id="breadcrumbs" class="dark">
+					<ul>
+						<li><a href="#">Home</a></li>
+						<li>Appointment</li>
+					</ul>
+				</nav>
+
+			</div>
+		</div>
+	</div>
 </div>
+
+
+<!-- Page Content
+================================================== -->
+<div class="container">
+	<div class="row">
+		<div class="col-xl-5 offset-xl-3">
+
+
+			<div class="login-register-page">
+				<!-- Welcome Text -->
+				<div class="welcome-text">
+					<h3>Make your appointment here!</h3>
+					
+				</div>
+					
+				<!-- Form -->
+				<form method="post" id="appointment-form">
+					<div>
+							<input type="text" class="input-text with-border" name="firstname" id="firstname" placeholder="First Name" required/>
+							<input type="text" class="input-text with-border" name="secondname" id="secondname" placeholder="Second Name" required/>
+							<input type="text" class="input-text with-border" name="age" id="age" placeholder="Age" required/>
+							Date <input type="date">
+							Time <input type="time">
+							Hospital <input type="">
+					</div>
+					
+				</form>
+				
+				<!-- Button -->
+				<button class="button full-width button-sliding-icon ripple-effect margin-top-10" type="submit" form="appointment-form">Book the Appointment<i class="icon-material-outline-arrow-right-alt"></i></button>
+				
+				
+			</div>
+
+		</div>
+	</div>
+</div>
+
+
+<!-- Spacer -->
+<div class="margin-top-70"></div>
+<!-- Spacer / End-->
