--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -15,7 +15,7 @@
                     
                     <!-- Logo -->
                     <div id="logo">
-                        <a href="index.html"><img src="assets/images/logo2.png" data-sticky-logo="assets/images/logo2.png" data-transparent-logo="assets/images/logo2.png" alt=""></a>
+                        <a routerLink="/"><img src="assets/images/logo2.png" data-sticky-logo="assets/images/logo2.png" data-transparent-logo="assets/images/logo2.png" alt=""></a>
                     </div>
     
                     
