--- a/src/app/appointments/appointments.component.html
+++ b/src/app/appointments/appointments.component.html
@@ -7,7 +7,7 @@
 		<div class="row">
 			<div class="col-md-12">
 
-				<h2>Book an Appointment</h2>
+				<h2>Appointment</h2>
 
 				<!-- Breadcrumbs -->
 				<nav id="breadcrumbs" class="dark">
@@ -33,37 +33,33 @@
 			<div class="login-register-page">
 				<!-- Welcome Text -->
 				<div class="welcome-text">
-					<h3>Make your appointment here!</h3>
-					
+					<h3>Please login to book an appointment!</h3>
+					<span>Don't have an account? <a routerLink="/register">Sign Up!</a></span>
 				</div>
 					
 				<!-- Form -->
-				<form method="post" id="appointment-form">
-					<div>
-							<input type="text" class="input-text with-border" name="firstname" id="firstname" placeholder="First Name" required/>
-							<input type="text" class="input-text with-border" name="secondname" id="secondname" placeholder="Second Name" required/>
-							<input type="text" class="input-text with-border" name="age" id="age" placeholder="Age" required/>
-							<input type="text" class="input-text with-border" name="nic" id="nic" placeholder="NIC" required/>
-							Date <input type="date" required/>
-							Time <input type="time" required/>
-							Hospital <select name="hospital"  required>
-								<option disabled select value> -- Select a Hospital -- </option>
-								<option value="nhsl">National Hospital Sri Lanka</option>
-								<option value="gampaha">District General Hospital - Gampaha</option>
-							</select>
-							Clinic <select name="clinic" required>
-								<option disabled select value> -- Select a Clinic -- </option>
-								<option value="opd">OPD</option>
-								<option value="ent">ENT</option>
-							</select>
+				<form method="post" id="login-form">
+					<div class="input-with-icon-left">
+						<i class="icon-material-baseline-mail-outline"></i>
+						<input type="text" class="input-text with-border" name="emailaddress" id="emailaddress" placeholder="Email Address" required/>
 					</div>
-					
+
+					<div class="input-with-icon-left">
+						<i class="icon-material-outline-lock"></i>
+						<input type="password" class="input-text with-border" name="password" id="password" placeholder="Password" required/>
+					</div>
+					<a href="#" class="forgot-password">Forgot Password?</a>
 				</form>
 				
 				<!-- Button -->
-				<button class="button full-width button-sliding-icon ripple-effect margin-top-10" type="submit" form="appointment-form">Book the Appointment<i class="icon-material-outline-arrow-right-alt"></i></button>
+				<button class="button full-width button-sliding-icon ripple-effect margin-top-10" type="submit" form="login-form">Log In <i class="icon-material-outline-arrow-right-alt"></i></button>
 				
-				
+				<!-- Social Login -->
+				<div class="social-login-separator"><span>or</span></div>
+				<div class="social-login-buttons">
+					<button class="facebook-login ripple-effect"><i class="icon-brand-facebook-f"></i> Log In via Facebook</button>
+					<button class="google-login ripple-effect"><i class="icon-brand-google-plus-g"></i> Log In via Google+</button>
+				</div>
 			</div>
 
 		</div>
