Login form authenticated

--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -31,7 +31,7 @@
 			<div class="login-register-page">
 				<!-- Welcome Text -->
 				<div class="welcome-text">
-					<h3 style="font-size: 26px;">Go to the nearest hospital and het your account created!</h3>
+					<h3 style="font-size: 26px;">Go to the nearest hospital and get your account created!</h3>
 					<span>Already have an account? <a routerLink="/login">Log In!</a></span>
 				</div>
 
