homepage categories changed

--- a/src/app/job-catogaries/job-catogaries.component.html
+++ b/src/app/job-catogaries/job-catogaries.component.html
@@ -34,7 +34,7 @@
                     
                     <div class="col-xl-3 col-md-6">
                         <!-- Photo Box -->
-                        <a href="jobs-list-layout-full-page-map.html" class="photo-box small" data-background-image="assets/images/job-category-02.jpg">
+                        <a href="jobs-list-layout-full-page-map.html" class="photo-box small" data-background-image="assets/images/ophthalmology.png">
                             <div class="photo-box-content">
                                 <h3>Ophthalmology</h3>
                                 <span>113</span>
@@ -44,7 +44,7 @@
                     
                     <div class="col-xl-3 col-md-6">
                         <!-- Photo Box -->
-                        <a href="jobs-grid-layout-full-page.html" class="photo-box small" data-background-image="assets/images/job-category-03.jpg">
+                        <a href="jobs-grid-layout-full-page.html" class="photo-box small" data-background-image="assets/images/physiotherapy.png">
                             <div class="photo-box-content">
                                 <h3>Physiotherapy</h3>
                                 <span>186</span>
@@ -54,9 +54,9 @@
         
                     <div class="col-xl-3 col-md-6">
                         <!-- Photo Box -->
-                        <a href="jobs-list-layout-2.html" class="photo-box small" data-background-image="assets/images/job-category-04.jpg">
+                        <a href="jobs-list-layout-2.html" class="photo-box small" data-background-image="assets/images/general-practitioner.jpg">
                             <div class="photo-box-content">
-                                <h3>Anaestheticss</h3>
+                                <h3>General Practitioner</h3>
                                 <span>298</span>
                             </div>
                         </a>
@@ -64,7 +64,7 @@
         
                     <div class="col-xl-3 col-md-6">
                         <!-- Photo Box -->
-                        <a href="jobs-list-layout-1.html" class="photo-box small" data-background-image="assets/images/job-category-05.jpg">
+                        <a href="jobs-list-layout-1.html" class="photo-box small" data-background-image="assets/images/Gastroenterology.png">
                             <div class="photo-box-content">
                                 <h3>Gastroenterology</h3>
                                 <span>549</span>
@@ -74,9 +74,9 @@
                     
                     <div class="col-xl-3 col-md-6">
                         <!-- Photo Box -->
-                        <a href="jobs-list-layout-full-page-map.html" class="photo-box small" data-background-image="assets/images/job-category-06.jpg">
+                        <a href="jobs-list-layout-full-page-map.html" class="photo-box small" data-background-image="assets/images/neuro.jpg">
                             <div class="photo-box-content">
-                                <h3>Graphics & Design</h3>
+                                <h3>Neurologist</h3>
                                 <span>873</span>
                             </div>
                         </a>
@@ -84,9 +84,9 @@
                     
                     <div class="col-xl-3 col-md-6">
                         <!-- Photo Box -->
-                        <a href="jobs-grid-layout-full-page.html" class="photo-box small" data-background-image="assets/images/job-category-07.jpg">
+                        <a href="jobs-grid-layout-full-page.html" class="photo-box small" data-background-image="assets/images/pediatrician.png">
                             <div class="photo-box-content">
-                                <h3>Digital Marketing</h3>
+                                <h3>Pediatrician</h3>
                                 <span>125</span>
                             </div>
                         </a>
@@ -94,9 +94,9 @@
         
                     <div class="col-xl-3 col-md-6">
                         <!-- Photo Box -->
-                        <a href="jobs-list-layout-2.html" class="photo-box small" data-background-image="assets/images/job-category-08.jpg">
+                        <a href="jobs-list-layout-2.html" class="photo-box small" data-background-image="assets/images/rehumatology.png">
                             <div class="photo-box-content">
-                                <h3>Education & Training</h3>
+                                <h3>Rheumatologist</h3>
                                 <span>445</span>
                             </div>
                         </a>
